--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+*{
+    margin: 0px;
+}
+
 body{
     display: flex;
     justify-content: center;
+    align-items: center;
+    padding: 5%;
 }
-
 
 
 section{
@@ -28,6 +33,7 @@ section{
     border: 1px solid black;
     font-size: larger;
     border-radius: 8px;
+    overflow: hidden;
 }
 
 table{
@@ -58,33 +64,44 @@ button{
 }
 
 
-@media screen and (max-width: 500px) {
-   body{
-    padding: 0%;
-    margin: 0%;
-   }
-   
-    section{
-        width:100%;
-        height: 30rem;
+@media screen and (max-width: 580px) {
+    body{
+        padding: 0%;
+        overflow: hidden;
     }
 
+    section{
+        width: 100%;
+        margin-top: 0px;
+        height: 100vh;
+        overflow: hidden;
+    }  
+
     .screen{
-        height: 5rem;
-        font-size: larger;
+        margin-top: 10vh;
+        width: 100%;
+        height: 10vh;
+        font-size: 3rem;
     }
 
     table{
-        height: 40rem;
+        width: 100%;
+        height: 60vh;
     }
-    
+
     button{
-        height: 5rem;
-        font-size: larger;
+        font-size: 2rem;
+        height: 100%;
+    }
+
+    .zeros-btn{
+        width: 100%;
     }
 
     .b-btn{
         background-size: 100%;
         background-repeat: no-repeat;
     }
+
+    
 }
